https://github.com/craftercms/craftercms/issues/821 - [studio-ui] Overwriting file name with an existing name is not showing the error on cropper dialog. #821

--- a/static-assets/themes/cstudioTheme/css/contextNav.css
+++ b/static-assets/themes/cstudioTheme/css/contextNav.css
@@ -126,6 +126,10 @@ body .mask{
   z-index: 100102!important;
 }
 
+.yui-dialog.inc-zindex {
+    z-index: 100104!important;
+}
+
 .yui-dialog .yui-overlay.yui-panel{
   border-radius: 6px;
 }
